styles/style.css
body {
    font-family: 'Noto Sans', sans-serif;
    color: white;
}

.img-project {
    object-fit: cover;
    width: 100%;
    min-height: 250px;
    padding: 10px:
    border: 1px solid #444;
    border-radius: 8px;
}

.img-skill {
    object-fit: contain;
    width: 80px;
    height: 80px;
    outline: 4px solid white;
    background-color: white;
}

.project-container {
    position: relative;
    overflow: hidden;
    height: 250px; /* Adjust this to your desired height */
}

.project-image {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.project-text {
    color: #fff;
    text-align: center;
    z-index: 4;
}

.project-link {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    text-decoration: none;
    align-items: center;
}

.project-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(127, 79, 155, 0.5));
    z-index: 2;
}

.project-container:hover .project-image {
    transform: scale(1.02); /* Adjust the zoom factor as needed */
}
  
.project-container:hover {
    opacity: 1;
}

